Fixed navbar blurring & readability

--- a/impulse-city.css
+++ b/impulse-city.css
@@ -1,7 +1,7 @@
 :root
 {
     /* Defined Variables */
-    --base-color: #6457A6;
-    --panel-color: #7D7ABC;
+    --base-color: #8071cb;
+    --panel-color: #928FD6;
     --accent-color: #F7C7DB;
 }
