--- a/panel-based.css
+++ b/panel-based.css
@@ -2,6 +2,7 @@
 {
     /* Defined Variables */
     --text-color: #000000;
+    --accent-text-color: #ffffff;
     --border-radius-large: 1rem;
     --max-panel-width: 50rem;
 
