--- a/unity-projects.css
+++ b/unity-projects.css
@@ -5,6 +5,7 @@
     --panel-color: #4e476a;
     --accent-color: #0D1116;
     --text-color: #ffffff;
+    --accent-text-color: #000000;
 }
 
 @media screen and (max-width: 950px)
